--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>First Git Upload</h1>
     <h2><strong>Read Me!</strong></h2>
     <p>Glad to see this works.</p>
+    <p>But how well?</p>
 </body>
 </html>
